# complicator

./: .gitignore  DEW_Data0  LICENSE.txt  MANIFEST.in  comparison_complicator.xlsx  complicator_abstract.md  data0.mgo  demo_custom_names.py  pyproject.toml  test_custom_names.py  test_fix.py  test_suffix_naming.py
complicator/: CoCl4_activity.py  __init__.py  autopp93s4.py  complicator_fit.py  example_input_file.csv  wrm_ligand_abbrv.csv
html/complicator/: CoCl4_activity.html  autopp93s4.html  complicator_fit.html  index.html
