[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "complicator"
version = "0.3.0"
description = "Estimate thermodynamic properties of aqueous metal complexes with monovalent ligands."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE.txt"]
authors = [
    {name = "Grayson Boyer", email = "gmboyer@asu.edu"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas",
    "wormutils",
    "chemparse",
]

[project.urls]
Homepage = "https://github.com/gmboyer/complicator"

[tool.setuptools]
packages = ["complicator"]
zip-safe = false

[tool.setuptools.package-data]
complicator = ["*.txt", "*.csv"]
